tests/spec/fail/validate_require_fail.aja
import (
    "modules/validate"
)

validate.require(false, "need true")
